Wikipedia.css
/* ... */
#side .aops-scroll-inner::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
#side .aops-scroll-inner {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.entry .cmty-itembox:not(:has(a))::before {
    content: "This post does not have any tags";
    color: gray;
}

.cmty-post-edit-info{
    display: none !important;
}

#message-box, #message{
    width: 100%;
}

.commentwrap{
    display: flex;
    flex-direction: column;
    width: 100% !important;
    padding: 0 !important;
}

.comment{
    background: none;
    border: 0 !important;
    margin-top: 30px !important;
}

.cfooter{
    order: -1;
    border-bottom: 1px solid #c8ccd1;
    border-top: 1px solid #c8ccd1;
    padding: 5px 0;
    font-size: 14px;
}

.cfooter .modactions a{
    font-size: 13px;
    text-decoration: none !important;
    padding: 12px 0 7px 0;
    margin-left: 16px;
    border-bottom: 2px solid transparent;
}

.cfooter .modactions a:hover{
    border-bottom-color: var(--link-color);
}

.cfooter .author{
    font-size: 13px;
    color: gray;
    margin: 0;
    line-height: 25px;
}

.cfooter .author img{
    display: none;
}

.cfooter .author a{
    font-weight: normal;
    color: var(--link-color);
}

.comment .message{
    margin-top: 5px;
}

#stats-widget{
    margin-bottom: 0 !important;
}

.entry{
    border: 0 !important;
}


@media (max-width: 1300px){
    :root{
        --width: 100%;
        --padding: 20px;
    }

    #blog_searchform fieldset{
        width: min(500px, calc(100vw - 377px - 160px));
    }
}

@media (max-width: 900px){
    #main{
        width: calc(100% - 270px);
        margin-left: 0;
    }

    #post-new-entry{
        font-size: 0;
        top: 20px;
    }

    #post-new-entry::before, #archive-widget::before, #blog_searchform fieldset::after{
        content: "";
        width: 32px;
        height: 32px;
        background: url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Antu_document-edit-sign.svg/512px-Antu_document-edit-sign.svg.png?20211123085115");
        background-size: 24px;
        background-repeat: no-repeat;
        background-position: center;
        display: inline-block;
        padding: 4px;
        filter: brightness(0%); /* css is best image editor */
    }

    #archive-widget{
        background: white;
        height: fit-content;
        height: -moz-fit-content;
        margin: 0;
        z-index: 11;
        right: 70px;
        left: auto;
        top: 52px;
        padding: 0;
        border: 0;
        max-height: 0;
        overflow: hidden;
    }

    #archive-widget::before{
        background-color: transparent;
        background-image: url("https://en.wikipedia.org/w/load.php?modules=skins.vector.icons&image=listBullet&format=original&lang=en&skin=vector-2022&version=3maje");
        background-size: 24px;
        background-repeat: no-repeat;
        background-position: center;
        position: fixed;
        top: 20px;
        right: 70px;
        cursor: pointer;
        filter: none;
        transition: 0.2s;
        user-select: none;
    }

    #archive-widget:hover::before{
        background-color: #f8f9fa;
    }

    #archive-widget:active::before{
        background-color: #eaecf0;
    }

    #archive-widget:hover{
        padding: 10px;
        border: 1px solid #a2a9b1;
        overflow: auto;
        max-height: min(500px, 75vh);
    }

    #blog_searchform fieldset::after{
        background-image: url("data:image/svg+xml;utf8,<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"20\" height=\"20\" viewBox=\"0 0 20 20\" fill=\"%23202122\"><path d=\"M12.2 13.6a7 7 0 111.4-1.4l5.4 5.4-1.4 1.4zM3 8a5 5 0 1010 0A5 5 0 003 8z\" /></svg>");
        background-size: 24px;
        background-repeat: no-repeat;
        background-position: center;
        position: fixed;
        right: 113px;
        cursor: pointer;
    }

    #blog_searchform fieldset{
        right: 113px;
        width: 36px;
        left: auto;
    }

    #blog_searchform fieldset::before{
        width: 0;
        height: 0;
    }

    #blog_searchform fieldset div{
        max-width: 0;
        overflow: hidden;
    }

    #blog_searchform fieldset > input{
        width: 32px;
        height: 32px !important;
        cursor: pointer;
        border: 0 !important;
        z-index: 16;
        background: transparent
    }

    #blog_searchform fieldset:has(input:active, input:focus){
        display: flex;
        flex-direction: row;
        border: none;
        width: 75vw;
        position: fixed;
        top: 20px;
        left: 50vw;
        transform: translateX(-50%);
        z-index: 15;
    }

    #blog_searchform fieldset:has(input:active, input:focus)::before{
        width: 20px;
        height: 20px;
    }

    #blog_searchform fieldset:has(input:active, input:focus) > input{
        height: 32px !important;
        padding-left: 36px !important;
        color: #202122 !important;
        border: 1px solid #a2a9b1 !important;
        font-size: 14px !important;
        flex: 1;
    }

    #blog_searchform fieldset:has(input:active, input:focus) div{
        max-width: none;
    }

    #blog_searchform fieldset:has(input:active, input:focus)::after{
        display: none;
    }

    #wrapper:has(#blog_keywords:active, #blog_keywords:focus) #header{
        z-index: 14;
    }

    #page-wrapper:has(#blog_keywords:active, #blog_keywords:focus) #navigation_box::after{
        display: none;
    }

    #page-wrapper:has(#blog_keywords:active, #blog_keywords:focus) :is(.avatar, .description, #header h1){
        display: none;
    }

    #blog_keywords:active, #blog_keywords:focus{
        cursor: auto;
    }

    #search-widget{
        display: block !important;
    }

    #side:has(#blog_keywords:active, #blog_keywords:focus){
        z-index: 16;
    }
}
/* ... */

